# robotic-framework

./: CMakeLists.txt  README.md
include/: core.hpp  core2.hpp  drv-basic.hpp  drv-filesystem.hpp
python-test/: launch.py
src/: drv-filesystem.cpp  drv-yaml.cpp  main.cpp  main3.cpp  main4.cpp  main5.cpp  wrapper-c.cpp
test_ctrl/: main.cpp
